--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,15 @@
     <artifactId>elasticsearch-java</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <properties>
+            <elasticsearch.version>2.1.1</elasticsearch.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
-            <version>2.1.2-SNAPSHOT</version>
+            <version>${elasticsearch.version}</version>
         </dependency>
     </dependencies>
 
